--- a/tmux.conf
+++ b/tmux.conf
@@ -10,42 +10,6 @@ set -sg escape-time 1
 # reload config without killing server
 bind r source-file ~/.tmux.conf \; display-message " Config reloaded..."
 
-# ----------------------
-# Status Bar
-# -----------------------
-set-option -g status on                # turn the status bar on
-set -g status-utf8 on                  # set utf-8 for the status bar
-set -g status-interval 5               # set update frequencey (default 15 seconds)
-set -g status-justify centre           # center window list for clarity
-# set-option -g status-position top    # position the status bar at top of screen
-
-# visual notification of activity in other windows
-setw -g monitor-activity on
-set -g visual-activity on
-
-# set color for status bar
-set-option -g status-bg colour235 #base02
-set-option -g status-fg yellow #yellow
-set-option -g status-attr dim
-
-# set window list colors - red for active and cyan for inactive
-set-window-option -g window-status-fg brightblue #base0
-set-window-option -g window-status-bg colour236
-set-window-option -g window-status-attr dim
-
-set-window-option -g window-status-current-fg brightred #orange
-set-window-option -g window-status-current-bg colour236
-set-window-option -g window-status-current-attr bright
-
-# show host name and IP address on left side of status bar
-set -g status-left-length 70
-set -g status-left "#[fg=green] #h :: #[fg=brightred]#(curl icanhazip.com) #[fg=yellow]#(ifconfig en0 | grep 'inet ' | awk '{print \"en0 \" $2}') #(ifconfig en1 | grep 'inet ' | awk '{print \"en1 \" $2}') #[fg=red]#(ifconfig tun0 | grep 'inet ' | awk '{print \"vpn \" $2}') "
-
-# show session name, window & pane number, date and time on right side of
-# status bar
-set -g status-right-length 60
-set -g status-right "#[fg=brightred]#S #I:#P #[fg=yellow]:: %d %b %Y #[fg=green]::%l:%M %p "
-
 # act like vim
 setw -g mode-keys vi
 bind h select-pane -L
@@ -67,56 +31,103 @@ bind v split-window -h
 # kill session
 bind-key X confirm-before -p "Kill #S (y/n)?" "run-shell 'tmux switch-client -n \\\; kill-session -t \"\$(tmux display-message -p \"#S\")\"'"
 
-# start window numbers at 1 to match keyboard order with tmux window order
+# Start window numbers at 1 to match keyboard order with tmux window order
 set -g base-index 1
 set-window-option -g pane-base-index 1
 
-# renumber windows sequentially after closing any of them
+# Renumber windows sequentially after closing any of them
 set -g renumber-windows on
 
-# soften status bar color from harsh green to light gray
-set -g status-bg '#666666'
-set -g status-fg '#2A2A2D'
-
-# increase scrollback lines
+# Increase scrollback lines
 set -g history-limit 10000
 
-# highlight status bar on activity
-set -g visual-activity on
-set -g monitor-activity on
-
-# active window title colors
-set-window-option -g window-status-current-fg default
-set-window-option -g window-status-current-bg yellow
-set-window-option -g window-status-current-attr bright
-
-# don't ask for confirmation when killing a pane
+# Don't ask for confirmation when killing a pane
 bind-key x kill-pane
 
-# switch to last pane
+# Switch to last pane
 bind-key C-a last-pane
 
-# mouse mode on
+# """""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
+#  => Mouse mode
+# """""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
+# Mouse mode on
 setw -g mode-mouse on
 set -g mouse-select-pane on
 set -g mouse-resize-pane on
 set -g mouse-select-window on
 
-# toggle mouse mode to allow mouse copy/paste
-# set mouse on with prefix m
+# Toggle mouse mode to allow mouse copy/paste set mouse on with prefix m
 bind m \
     set -g mode-mouse on \;\
     set -g mouse-resize-pane on \;\
     set -g mouse-select-pane on \;\
     set -g mouse-select-window on \;\
     display 'Mouse: ON'
-# set mouse off with prefix M
+# Set mouse off with prefix M
 bind M \
     set -g mode-mouse off \;\
     set -g mouse-resize-pane off \;\
     set -g mouse-select-pane off \;\
     set -g mouse-select-window off \;\
     display 'Mouse: OFF'
+
+# """""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
+#  => Status Bar
+# """""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
+# Turn the status bar on
+set-option -g status on
+
+# Set utf-8 for the status bar
+set -g status-utf8 on
+
+# Set update frequencey (default 15 seconds)
+set -g status-interval 5
+
+# Center window list for clarity
+set -g status-justify centre
+
+# Default statusbar colors
+set-option -g status-bg colour235 #base02
+set-option -g status-fg colour136 #yellow
+set-option -g status-attr default
+
+# Default window title colors
+set-window-option -g window-status-fg colour244 #base0
+set-window-option -g window-status-bg default
+#set-window-option -g window-status-attr dim
+
+# Active window title colors
+set-window-option -g window-status-current-fg colour166 #orange
+set-window-option -g window-status-current-bg default
+#set-window-option -g window-status-current-attr bright
+
+# Pane border
+set-option -g pane-border-fg colour235 #base02
+set-option -g pane-active-border-fg colour240 #base01
+
+# Message text
+set-option -g message-bg colour235 #base02
+set-option -g message-fg colour166 #orange
+
+# Pane number display
+set-option -g display-panes-active-colour colour33 #blue
+set-option -g display-panes-colour colour166 #orange
+
+# Clock
+set-window-option -g clock-mode-colour colour64 #green
+
+# Highlight status bar on activity
+setw -g visual-activity on
+set -g monitor-activity on
+
+# show host name and IP address on left side of status bar
+set -g status-left-length 70
+set -g status-left "#[fg=green] #h > #[fg=brightred]#(curl icanhazip.com) #[fg=yellow]#(ifconfig en0 | grep 'inet ' | awk '{print \"en0 \" $2}') #(ifconfig en1 | grep 'inet ' | awk '{print \"en1 \" $2}') #[fg=red]#(ifconfig tun0 | grep 'inet ' | awk '{print \"vpn \" $2}') "
+
+# show session name, window & pane number, date and time on right side of
+# status bar
+set -g status-right-length 60
+set -g status-right "#[fg=brightred]#S #I:#P #[fg=yellow] %d %b %Y %l:%M %p "
 
 # Local config
 if-shell "[ -f ~/.tmux.conf.local ]" 'source ~/.tmux.conf.local'
