--- a/tmux.conf
+++ b/tmux.conf
@@ -1,8 +1,5 @@
 # improve colors
-set -g default-terminal 'screen-256color'
-
-# zsh as default shell
-set-option -g default-shell /bin/zsh
+set -g default-terminal "xterm-256color"
 
 setw -g utf8 on
 set -sg escape-time 1
@@ -10,60 +7,44 @@ set -sg escape-time 1
 # reload config without killing server
 bind r source-file ~/.tmux.conf \; display-message " Config reloaded..."
 
-# act like vim
-setw -g mode-keys vi
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
-bind-key -r C-h select-window -t :-
-bind-key -r C-l select-window -t :+
-
 # act like GNU screen
 unbind C-b
 set -g prefix C-a
 
 # use v and s for windows splits
 unbind %
-bind s split-window -v
-bind v split-window -h
+bind - split-window -v
+bind | split-window -h
 
-# kill session
-bind-key X confirm-before -p "Kill #S (y/n)?" "run-shell 'tmux switch-client -n \\\; kill-session -t \"\$(tmux display-message -p \"#S\")\"'"
-
-# Start window numbers at 1 to match keyboard order with tmux window order
+# start window numbers at 1 to match keyboard order with tmux window order
 set -g base-index 1
 set-window-option -g pane-base-index 1
 
-# Renumber windows sequentially after closing any of them
+# renumber windows sequentially after closing any of them
 set -g renumber-windows on
 
-# Increase scrollback lines
+# increase scrollback lines
 set -g history-limit 10000
 
-# Don't ask for confirmation when killing a pane
+# highlight status bar on activity
+set -g visual-activity on
+set -g monitor-activity on
+
+# don't ask for confirmation when killing a pane
 bind-key x kill-pane
 
-# Switch to last pane
-bind-key C-a last-pane
+# select session
+bind m choose-session
 
-# """""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
-#  => Mouse mode
-# """""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
-# Mouse mode on
-setw -g mode-mouse on
-set -g mouse-select-pane on
-set -g mouse-resize-pane on
-set -g mouse-select-window on
-
-# Toggle mouse mode to allow mouse copy/paste set mouse on with prefix m
+# toggle mouse mode to allow mouse copy/paste
+# set mouse on with prefix m
 bind m \
     set -g mode-mouse on \;\
     set -g mouse-resize-pane on \;\
     set -g mouse-select-pane on \;\
     set -g mouse-select-window on \;\
     display 'Mouse: ON'
-# Set mouse off with prefix M
+# set mouse off with prefix M
 bind M \
     set -g mode-mouse off \;\
     set -g mouse-resize-pane off \;\
@@ -71,63 +52,48 @@ bind M \
     set -g mouse-select-window off \;\
     display 'Mouse: OFF'
 
-# """""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
-#  => Status Bar
-# """""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
-# Turn the status bar on
-set-option -g status on
+# switch to last pane
+bind-key C-a last-pane
 
-# Set utf-8 for the status bar
-set -g status-utf8 on
+#### COLOUR (Solarized 256)
 
-# Set update frequencey (default 15 seconds)
-set -g status-interval 5
-
-# Center window list for clarity
-set -g status-justify centre
-
-# Default statusbar colors
+# default statusbar colors
 set-option -g status-bg colour235 #base02
 set-option -g status-fg colour136 #yellow
 set-option -g status-attr default
 
-# Default window title colors
+# default window title colors
 set-window-option -g window-status-fg colour244 #base0
 set-window-option -g window-status-bg default
 #set-window-option -g window-status-attr dim
 
-# Active window title colors
+# active window title colors
 set-window-option -g window-status-current-fg colour166 #orange
 set-window-option -g window-status-current-bg default
 #set-window-option -g window-status-current-attr bright
 
-# Pane border
+# pane border
 set-option -g pane-border-fg colour235 #base02
-set-option -g pane-active-border-fg colour240 #base01
+set-option -g pane-active-border-fg default
 
-# Message text
+# message text
 set-option -g message-bg colour235 #base02
 set-option -g message-fg colour166 #orange
 
-# Pane number display
+# pane number display
 set-option -g display-panes-active-colour colour33 #blue
 set-option -g display-panes-colour colour166 #orange
 
-# Clock
+# clock
 set-window-option -g clock-mode-colour colour64 #green
 
-# Highlight status bar on activity
-setw -g visual-activity on
-set -g monitor-activity on
-
-# show host name and IP address on left side of status bar
+# STATUS BAR
 set -g status-left-length 70
-set -g status-left "#[fg=green] #h > #[fg=brightred]#(curl icanhazip.com) #[fg=yellow]#(ifconfig en0 | grep 'inet ' | awk '{print \"en0 \" $2}') #(ifconfig en1 | grep 'inet ' | awk '{print \"en1 \" $2}') #[fg=red]#(ifconfig tun0 | grep 'inet ' | awk '{print \"vpn \" $2}') "
-
-# show session name, window & pane number, date and time on right side of
-# status bar
-set -g status-right-length 60
-set -g status-right "#[fg=brightred]#S #I:#P #[fg=yellow] %d %b %Y %l:%M %p "
+set -g status-left "#[fg=colour208] [#S] #[fg=colour75]#(curl icanhazip.com) #[fg=colour105]#(ifconfig en0 | grep 'inet ' | awk '{print \"en0 \" $2}') #(ifconfig en1 | grep 'inet ' | awk '{print \"en1 \" $2}') #[fg=colour75]#(ifconfig tun0 | grep 'inet ' | awk '{print \"vpn \" $2}')#[fg=colour208]► "
+setw -g window-status-format " #[bg=colour237]#[fg=colour245] #I #[bg=colour234]#[fg=colour245] #W#F "
+setw -g window-status-current-format " #[bg=colour208]#[fg=colour234] #I #[bg=colour240]#[fg=colour208] #W#F "
+set -g status-right-length 80
+set -g status-right "#[fg=colour105]#(~/projects/bolsa.rb) #[fg=colour124]#h #I:#P #[fg=colour208]🕒  %d %b %Y - %H:%M " 
 
 # Local config
 if-shell "[ -f ~/.tmux.conf.local ]" 'source ~/.tmux.conf.local'
