Update tmuxinator for Gizmo

--- a/tmuxinator/gizmo.yml
+++ b/tmuxinator/gizmo.yml
@@ -23,7 +23,7 @@ name: gizmo
 windows:
   - gizmo:
       root: ~/projects/gizmo
-      layout: ff9f,212x62,0,0[212x24,0,0,0,212x37,0,25{105x37,0,25[105x18,0,25,2,105x18,0,44,6],106x37,106,25,3}]
+      layout: 675,212x62,0,0[212x24,0,0,16,212x37,0,25{105x37,0,25[105x18,0,25,18,105x18,0,44,19],106x37,106,25[106x18,106,25,20,106x18,106,44,25]}]
       panes:
         -
         - start_worker
