--- a/tmux.conf
+++ b/tmux.conf
@@ -10,6 +10,7 @@ bind r source-file ~/.tmux.conf \; display-message " Config reloaded..."
 # act like GNU screen
 unbind C-b
 set -g prefix C-a
+bind a send-prefix
 
 # use v and s for windows splits
 unbind %
@@ -89,7 +90,7 @@ set-window-option -g clock-mode-colour colour64 #green
 
 # STATUS BAR
 set -g status-left-length 70
-set -g status-left "#[fg=colour208] [#S] #[fg=colour75]#(curl icanhazip.com) #[fg=colour105]#(ifconfig en0 | grep 'inet ' | awk '{print \"en0 \" $2}') #(ifconfig en1 | grep 'inet ' | awk '{print \"en1 \" $2}') #[fg=colour75]#(ifconfig tun0 | grep 'inet ' | awk '{print \"vpn \" $2}')#[fg=colour208]► "
+set -g status-left "#[fg=colour208] [#S] #[fg=colour75](curl icanhazip.com) #[fg=colour105]#(ifconfig en0 | grep 'inet ' | awk '{print \"en0 \" $2}') #(ifconfig en1 | grep 'inet ' | awk '{print \"en1 \" $2}') #[fg=colour75]#(ifconfig tun0 | grep 'inet ' | awk '{print \"vpn \" $2}')#[fg=colour208]► "
 setw -g window-status-format " #[bg=colour237]#[fg=colour245] #I #[bg=colour234]#[fg=colour245] #W#F "
 setw -g window-status-current-format " #[bg=colour208]#[fg=colour234] #I #[bg=colour240]#[fg=colour208] #W#F "
 set -g status-right-length 80
